--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -62,6 +62,8 @@
   <script th:src="@{/js/google-map.js}"></script>
   <script th:src="@{/js/main.js}"></script>
   <script th:src="@{/js/daterangepicker.js}"></script>
+  <script th:src="@{/js/custom.js}"></script>
+  <script th:src="@{/js/datemonth.js}"></script>
   
   <!-- 각 페이지의 스크립트가 작성될 위치 -->
 	<th:block layout:fragment="script"></th:block>
