--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,7 @@
           <li class="nav-item active"><a href="/" class="nav-link">항공권 예매</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">마이페이지</a></li>
           <li class="nav-item"><a href="hotel.html" class="nav-link">이벤트</a></li>
-          <li class="nav-item cta"><a href="contact.html" class="nav-link"><span>로그인</span></a></li>
+          <li class="nav-item cta"><a href="members/login" class="nav-link"><span>로그인</span></a></li>
         </ul>
       </div>
     </div>
