--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8672,7 +8672,7 @@ textarea.form-control {
       color: #4d4d4d !important;
       border: 2px solid rgba(0, 0, 0, 0.1);
       font-size: 14px;
-      width: 100%;
+      width: 150px;
       height: 70px !important;
       bordeR: 1px solid transparent;
       padding: 10px 30px;
