--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,76 +17,25 @@
              
               <form action="" method="post" class="d-block d-flex">
                 <div class="fields d-block d-flex">
-                  <div class="textfield-search one-third">
-                  	<input type="text" class="form-control" name="daterange">
-                  </div>
+                  <div class="col-sm-3">
+  					<div class="input-group">
+  						<span class="input-group-addon">
+				  			<i class="fa fa-calendar bigger-110"></i>
+				  		</span>
+				  		<input type="text" id="datepicker" class="form-control col-xs-12" />
+				  </div>
+				</div>
+                 
+                 <div class="col-sm-3">
+  					<div class="input-group">
+  						<span class="input-group-addon">
+				  			<i class="fa fa-calendar bigger-110"></i>
+				  		</span>
+				  		<input type="text" id="datepicker" class="form-control col-xs-12" />
+				  </div>
+				</div>
                   
-                  
-                       <!--  
-                   <div class="date-wrap">
-			            <div class="date-month">
-			                <span id="month-this">2022.05</span>
-			                <div class="button_wrap">
-			                    <button type="button" id="month-prev" class="month-move" data-ym="2022-04-01"> < </button>
-			                    <button type="button" id="month-next" class="month-move" data-ym="2022-06-01"> > </button>
-			                </div>
-			            </div>
-			            <table class="date-month">
-			                <thead>
-			                    <tr>
-			                        <th style = "color: red";>일</th>
-			                        <th style = "color: gray";>월</th>
-			                        <th style = "color: gray";>화</th>
-			                        <th style = "color: gray";>수</th>
-			                        <th style = "color: gray";>목</th>
-			                        <th style = "color: gray";>금</th>
-			                        <th style = "color: blue";>토</th>
-			                    </tr>
-			                </thead>
-			                <tbody id="tbl-month">
-			                    <tr>
-			                        <td class="sun"><a>1</a></td>
-			                        <td class=""><a href="/news/schedule?date=2022-05-02">2</a></td>
-			                        <td class=""><a>3</a></td>
-			                        <td class=""><a>4</a></td>
-			                        <td class="today"><a>5</a></td>
-			                        <td class=""><a>6</a></td>
-			                        <td class="sat"><a>7</a></td>
-			                    </tr>
-			                    <tr>
-			                        <td class="sun"><a>29</a></td>
-			                        <td class=""><a>30</a></td>
-			                        <td class=""><a>31</a></td>
-			                        <td class=""><a></a></td>
-			                        <td class=""><a></a></td>
-			                        <td class=""><a></a></td>
-			                        <td class="sat"><a></a></td>
-			                    </tr>
-			                </tbody>
-			            </table>
-			        </div>
-			        
-			        
-			        
-			        
-			        <div class="row">
-							<div class="col-12">
-								<form class="form">
-									<div class="row mb-2">
-										<div class="col-sm-12 col-md-6 mb-3 mb-lg-0 col-lg-5">
-											<input type="text" class="form-control" name="daterange">
-										</div>
-
-									</div>    
-									<div class="row align-items-center">
-										<div class="col-sm-12 col-md-6 mb-3 mb-lg-0 col-lg-4">
-											<input type="submit" class="btn btn-primary btn-block" value="Search">
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-             -->
+            
                   	
                   
                   
@@ -116,6 +65,9 @@
         </div>
       </div>
     </div>
+
+
+
 
     <section class="ftco-section services-section bg-light">
       <div class="container">
