--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -26,14 +26,14 @@
 				  </div>
 				</div>
                  
-                 <div class="col-sm-3">
-  					<div class="input-group">
-  						<span class="input-group-addon">
-				  			<i class="fa fa-calendar bigger-110"></i>
-				  		</span>
-				  		<input type="text" id="datepicker" class="form-control col-xs-12" />
-				  </div>
-				</div>
+                <div class="col-sm-3">
+	<div class="input-group">
+		<span class="input-group-addon">
+      		<i class="fa fa-calendar bigger-110"></i>
+      	</span>
+		<input class="form-control" type="text" name="date-range-picker" id="dateRangePicker">
+	</div>
+</div>
                   
             
                   	
