--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -13,20 +13,12 @@
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">여행 예약하기</p>
             <div class="block-17 my-4">
               
-              
+             
              
               <form action="" method="post" class="d-block d-flex">
                 <div class="fields d-block d-flex">
-                  <div class="col-sm-3">
-  					<div class="input-group">
-  						<span class="input-group-addon">
-				  			<i class="fa fa-calendar bigger-110"></i>
-				  		</span>
-				  		<input type="text" id="datepicker" class="form-control col-xs-12" />
-				  </div>
-				</div>
                  
-                <div class="col-sm-3">
+                <div class="col-sm-6">
 	<div class="input-group">
 		<span class="input-group-addon">
       		<i class="fa fa-calendar bigger-110"></i>
@@ -55,7 +47,7 @@
                     </select>
                   </div>
                 </div>
-                <input type="submit" class="search-submit btn btn-primary" value="검색">  
+                <input type="submit" class="search-submit btn btn-primary" value="예약">  
               </form>
              
             
