--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -45,4 +45,16 @@
 			            </table>
 			        </div>    
 
+<!-- 관리자 메뉴
+항공편 등록
+출발국가 > 도착국가
+시간까지 나와야함
+운행시간
+경유 유무
+좌석별 가격
+남은좌석
+좌석상태
+
+항공편 관리
+ -->
 </html>
