--- a/src/main/resources/templates/flight/flightModifyForm.html
+++ b/src/main/resources/templates/flight/flightModifyForm.html
@@ -2,7 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layouts/layout1}">
-
+<head>
+	<meta name="_csrf" th:content="${_csrf.token}" />
+	<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+</head>
 <!-- 각 페이지의 CSS가 작성될 위치 -->
 <th:block layout:fragment="css">
 	<style>
@@ -32,9 +35,9 @@ fieldError {
 					<h2 class="h3 mb-3 text-black">항공편 등록</h2>
 					<div class="p-3 p-lg-5 border">
 						<form role="form"
-							th:action="@{'/admin/flight/' + ${flightFormDto.id}}" method="post"
-							enctype="multipart/form-data" th:object="${flightFormDto}"
-							name="flightForm">
+							th:action="@{'/admin/flight/' + ${flightFormDto.id}}"
+							method="post" enctype="multipart/form-data"
+							th:object="${flightFormDto}" name="flightForm">
 
 
 							<input type="hidden" th:field="*{id}" />
@@ -42,87 +45,85 @@ fieldError {
 
 							<div class="form-group row">
 								<div class="col-md-12">
-									<label th:for="startCountryName" class="text-black">출발국가명</label> <input
-										type="text" class="form-control" th:field="*{startCountryName}"
-										placeholder="출발국가명 입력">
-									<p th:if="${#fields.hasErrors('startCountryName')}" th:errors="*{startCountryName}"
-										class="fieldError">Incorrect Data</p>
-								</div>
-							</div>
-
-
-							<div class="form-group row">
-								<div class="col-md-12">
-									<label th:for="startDate" class="text-black">출발일자</label> 
-										<input th:for="startDate"  class="form-control" th:field="*{startDate}" type="text" name="date-Start-range-picker" id="dateStartRangePicker">
-									<p th:if="${#fields.hasErrors('startDate')}"
-										th:errors="*{startDate}" class="fieldError">Incorrect
+									<label th:for="startCountryName" class="text-black">출발국가명</label>
+									<input type="text" class="form-control"
+										th:field="*{startCountryName}" placeholder="출발국가명 입력">
+									<p th:if="${#fields.hasErrors('startCountryName')}"
+										th:errors="*{startCountryName}" class="fieldError">Incorrect
 										Data</p>
 								</div>
 							</div>
 
-												
+
+							<div class="form-group row">
+								<div class="col-md-12">
+									<label th:for="startDate" class="text-black">출발일자</label> <input
+										th:for="startDate" class="form-control"
+										th:field="*{startDate}" type="text"
+										name="date-Start-range-picker" id="dateStartRangePicker">
+									<p th:if="${#fields.hasErrors('startDate')}"
+										th:errors="*{startDate}" class="fieldError">Incorrect Data</p>
+								</div>
+							</div>
+
+
 
 
 							<div class="form-group row">
 								<div class="col-md-12">
-									<label th:for="startTime" class="text-black">출발시간</label>
-									<input
+									<label th:for="startTime" class="text-black">출발시간</label> <input
 										type="text" class="form-control" th:field="*{startTime}"
 										placeholder="출발시간 입력">
 									<p th:if="${#fields.hasErrors('startTime')}"
-										th:errors="*{startTime}" class="fieldError">Incorrect
-										Data</p>
-								</div>
-							</div>
-
-							<div class="form-group row">
-								<div class="col-md-12"> 
-									<label th:for="leaveCountryName" class="text-black">도착국가</label> <input
-										type="text" class="form-control" th:field="*{leaveCountryName}"
-										placeholder="도착국가명 입력">
-									<p th:if="${#fields.hasErrors('leaveCountryName')}" th:errors="*{leaveCountryName}"
-										class="fieldError">Incorrect Data</p>
+										th:errors="*{startTime}" class="fieldError">Incorrect Data</p>
 								</div>
 							</div>
 
 							<div class="form-group row">
 								<div class="col-md-12">
-									<label th:for="leaveDate" class="text-black">도착일자</label> 
-										<input th:for="leaveDate"  class="form-control" th:field="*{leaveDate}" type="text" name="date-leave-range-picker" id="dateleaveRangePicker">
+									<label th:for="leaveCountryName" class="text-black">도착국가</label>
+									<input type="text" class="form-control"
+										th:field="*{leaveCountryName}" placeholder="도착국가명 입력">
+									<p th:if="${#fields.hasErrors('leaveCountryName')}"
+										th:errors="*{leaveCountryName}" class="fieldError">Incorrect
+										Data</p>
+								</div>
+							</div>
+
+							<div class="form-group row">
+								<div class="col-md-12">
+									<label th:for="leaveDate" class="text-black">도착일자</label> <input
+										th:for="leaveDate" class="form-control"
+										th:field="*{leaveDate}" type="text"
+										name="date-leave-range-picker" id="dateleaveRangePicker">
 									<p th:if="${#fields.hasErrors('leaveDate')}"
-										th:errors="*{leaveDate}" class="fieldError">Incorrect
-										Data</p>
+										th:errors="*{leaveDate}" class="fieldError">Incorrect Data</p>
 								</div>
 							</div>
 
 							<div class="form-group row">
 								<div class="col-md-12">
-									<label th:for="leaveTime" class="text-black">도착시간</label>
-									<input
+									<label th:for="leaveTime" class="text-black">도착시간</label> <input
 										type="text" class="form-control" th:field="*{leaveTime}"
 										placeholder="도착시간 입력">
 									<p th:if="${#fields.hasErrors('leaveTime')}"
-										th:errors="*{leaveTime}" class="fieldError">Incorrect
-										Data</p>
+										th:errors="*{leaveTime}" class="fieldError">Incorrect Data</p>
 								</div>
 							</div>
 
 							<div class="form-group">
 								<div class="col-md-12 d-flex justify-content-center">
 									<button type="button" onclick="beforeSubmit()"
-										class="btn btn-primary mb-3" style="width: 150px;">항공편 수정</button>
+										class="btn btn-primary mb-3" style="width: 150px;">항공편
+										수정</button>
 								</div>
 							</div>
-							
-							<th:block>
-									<div class="col-md-12 d-flex justify-content-center">
-										<button type="button" class="btn btn-primary"
-											th:value="${flight?.flightId}" onclick="deleteFlight(this.value)">
-											삭제하기</button>
-									</div>
-								</th:block>
-								
+								<button type="button"
+									class="btn btn-danger waves-effect waves-light"
+									th:id="${flightFormDto.id}" th:value="${flightFormDto.id}"
+									th:onclick="'javascript:deleteFlight(' + ${flightFormDto.id} +')'">삭제하기</button>
+
+
 							<input type="hidden" th:name="${_csrf.parameterName}"
 								th:value="${_csrf.token}">
 						</form>
@@ -134,69 +135,51 @@ fieldError {
 
 
 </div>
-
-
+	
 <!-- 각 페이지의 스크립트가 작성될 위치 -->
 <th:block layout:fragment="script">
 	<script th:inline="javascript">
-	
-	$(document).ready(function(){
-		var errorMessage = [[${errorMessage}]];
-    	if(errorMessage != null){
-        	alert(errorMessage);
-    	}
-    	
+		// 상품등록 버튼을 누를 때 천단위 콤마를 제거한 후 전송.
+		function beforeSubmit() {
+			const f = document.flightForm;
 
-    	
-		bindDomEvent(); // 이벤트륻 등록
-	})
-		
+			f.submit();
+		}
 
-	// 상품등록 버튼을 누를 때 천단위 콤마를 제거한 후 전송.
-	function beforeSubmit() {
-		const f = document.flightForm;
-		
-		f.submit();
-	}
+		function deleteFlight(flightId) {
+			const deleteconf = confirm("주문 내역을 삭제하시겠습니까?");
+			if (!deleteconf)
+				return;
 
-	function deleteFlight(flightId) {
-		const deleteConf = confirm("삭제하시겠습니까?");
+			var token = $("meta[name='_csrf']").attr("content");
+			var header = $("meta[name='_csrf_header']").attr("content");
 
-		if (!deleteConf)
-			return; // 취소버튼 누르면
+			var url = "/admin/"   + flightId +"/delete";
 
-		var token = $("meta[name='_csrf']").attr("content");
-		var header = $("meta[name='_csrf_header']").attr("content");
-		
-		// request url
-		var url = "/flight/" + flightId + "/delete";
-
-		
-		$.ajax({
-			url : url,
-			type : "DELETE", // 전송방식
-			contentType : "application/json",
-			
-			beforeSend : function(xhr) {
-				// 데이터를 전송하기 전에 헤더에 csrf값을 설정
-				xhr.setRequestHeader(header, token);
-			},
-			dataType : "json",
-			cache : false,
-			success : function(result, status) {
-				location.href = '/flights';
-			},
-			error : function(jqXHR, status, error) {
-				if (jqXHR.status == '401') {
-					alert("로그인 후 이용해주세요.");
-					location.href = '/members/login';
-				} else {
-					alert(jqXHR.responseText);
-				}
-			}
-		});
-	}
-	
+			$.ajax({
+				url : url,
+				type : "DELETE", //전송방식
+				contentType : "application/json",
+				beforeSend : function(xhr) {
+					//데이터를 전송하기 전에 헤더에 xsrf값
+					xhr.setRequestHeader(header, token);
+				},
+				dataType : "json",
+				cache : false,
+				success : function(result, status) {
+					// Handle success, e.g., refresh the page or update the UI
+					location.href = "/";
+				},
+				error : function(jqXHR, status, error) {
+					if (jqXHR.status == "401") {
+						alert("로그인 후 이용해주세요.");
+						location.href = "/member/login";
+					} else {
+						alert(jqXHR.responseText);
+					}
+				},
+			});
+		}
 	</script>
 </th:block>
 
