--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
           <li class="nav-item active has-children" sec:authorize="hasAnyAuthority('ROLE_ADMIN')"><a class="nav-link">관리자메뉴</a>
 			<ul class="dropdown">
 				<li><a href="/admin/flight/new">항공권등록</a></li>
-				<li><a href="/admin/flights">항공권관리</a></li>
+				<li><a href="/admin/flights">항공권/좌석 관리</a></li>
 			</ul>
 		  </li>
 
