--- a/src/main/resources/templates/flight/flightModifyForm.html
+++ b/src/main/resources/templates/flight/flightModifyForm.html
@@ -118,11 +118,15 @@ fieldError {
 										수정</button>
 								</div>
 							</div>
+							
+							<div class="form-group">
+								<div class="col-md-12 d-flex justify-content-center">
 								<button type="button"
 									class="btn btn-danger waves-effect waves-light"
 									th:id="${flightFormDto.id}" th:value="${flightFormDto.id}"
 									th:onclick="'javascript:deleteFlight(' + ${flightFormDto.id} +')'">삭제하기</button>
-
+								</div>
+							</div>
 
 							<input type="hidden" th:name="${_csrf.parameterName}"
 								th:value="${_csrf.token}">
