--- a/src/main/resources/templates/flightclass/airClass.html
+++ b/src/main/resources/templates/flightclass/airClass.html
@@ -38,7 +38,8 @@
 
 							<input type="hidden" th:field="*{id}" />
 
-								
+							<a href="/" th:text="${flightId}">	a</a>
+											
 							<div class="form-group row">
 								<div class="col-md-12">
 									<label th:for="economySellStatus" class="text-black">이코노미 좌석상태 </label>
