--- a/src/main/resources/templates/flightclass/airClass.html
+++ b/src/main/resources/templates/flightclass/airClass.html
@@ -38,7 +38,8 @@
 
 							<input type="hidden" th:field="*{id}" />
 
-							<a href="/" th:text="${flightId}">	a</a>
+							<a href="/" th:text="${id}">a</a>
+							
 											
 							<div class="form-group row">
 								<div class="col-md-12">
