--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" th:href="@{/css/flaticon.css}">
     <link rel="stylesheet" th:href="@{/css/icomoon.css}">
     <link rel="stylesheet" th:href="@{/css/style.css}">
-
+	<!-- CSS only -->
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <!-- 각 페이지의 CSS가 작성될 위치 -->
@@ -73,6 +73,7 @@
    <script th:src="@{/js/moment.min.js}"></script>
    <script th:src="@{/js/daterangepicker.js}"></script>
    <script th:src="@{/js/datepicker.js}"></script>
+   <!-- JavaScript Bundle with Popper -->
    
    <!--		달력 만들기
     {
