--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,9 +19,8 @@
 			</ul>
 		  </li>
 
-          <li class="nav-item active"><a href="/" class="nav-link">항공권 예매</a></li>
+          <li class="nav-item active"><a href="/air/airOrder" class="nav-link">항공권 예매</a></li>
           <li class="nav-item"><a href="/mypage/pageForm" sec:authorize="isAuthenticated()" class="nav-link">마이페이지</a></li>
-          <li class="nav-item"><a href="/" class="nav-link">이벤트</a></li>
           <li class="nav-item cta"><a href="/members/login" sec:authorize="isAnonymous()" class="nav-link">로그인</a></li>
 		  <li class="nav-item cta"><a href="/members/logout" sec:authorize="isAuthenticated()" class="nav-link">로그아웃</a></li>
         </ul>
