--- a/src/main/resources/templates/flight/flightForm.html
+++ b/src/main/resources/templates/flight/flightForm.html
@@ -19,7 +19,7 @@
 			<div class="row">
 				<div class="col-md-12 mb-0">
 					<a href="/">Home</a> <span class="mx-2 mb-0">/</span> <strong
-						class="text-black">상품등록</strong>
+						class="text-black">항공편등록</strong>
 				</div>
 			</div>
 		</div>
@@ -29,7 +29,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="h3 mb-3 text-black">상품등록</h2>
+					<h2 class="h3 mb-3 text-black">항공편등록</h2>
 					<div class="p-3 p-lg-5 border">
 						<form role="form" action="/admin/flight/new" method="post"
 							enctype="multipart/form-data" th:object="${flightFormDto}"
