--- a/src/main/resources/templates/flight/flightModifyForm.html
+++ b/src/main/resources/templates/flight/flightModifyForm.html
@@ -32,7 +32,7 @@ fieldError {
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="h3 mb-3 text-black">항공편 등록</h2>
+					<h2 class="h3 mb-3 text-black">항공편 수정</h2>
 					<div class="p-3 p-lg-5 border">
 						<form role="form"
 							th:action="@{'/admin/flight/' + ${flightFormDto.id}}"
